--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
 
   {% include social.html %}
 
-  {%- assign theme_name = "Txe Gladiator" -%}
-  {%- assign theme_repo = "https://google.com" -%}
+  {%- assign theme_name = "DevGames" -%}
+  {%- assign theme_repo = "https://www.txegames.de" -%}
   <small id="attribution">
     Created by <a href="{{ theme_repo }}">{{ theme_name }}</a>
   </small>
